Legend:

[+] New/improved feature 
[B] Bug fixed
[K] Known issue
[O] Other

Change log
==========

v0.6.0

[+] Workaround for automake 1.14 subdir-objects bug(13928).
[+] Fixed some LLVM related warnings and errors (clang/clang++)

[+][CMM] Added NF port manager extensions

[+][drivers] Adapted to the new extensions-enabled HAL API

[+][gnu-linux-dpdk] Added support for NF ports, KNI and secondary DPDK proc.(thanks I. Cerrato)
[O][gnu-linux-dpdk] Moved platform driver to DPDK v1.7 (thanks D. Verbeiren)
[B][gnu-linux-dpdk] Fixed functions push() and pop() in dpdk_datapacket
[B][CMM] Set cookie field in Packet-In messages based on flow entry


v0.5.3

[B][gnu-linux][gnu-linux-dpdk] Prevent IPv4 fragments to be classified beyond IP
[B][gnu-linux] Fixed invalid NIC link status (work-arounded kernel bug)

v0.5.2

[B][CMM] Fixed issue #40 (bug) => invalid table-features-stats messages generated

v0.5.1

[+] Distributing default xdpd.conf during `make install`

[+][gnu-linux][gnu-linux-dpdk] GTP push/pop actions revised
[B][gnu-linux][gnu-linux-dpdk] Fixed stored buffer leak during LSI destruction
[B][gnu-linux][gnu-linux-dpdk] preserve checksum calculation flags in function hal_driver_of1x_process_packet_out
[B][gnu-linux-dpdk] Fixed functions push() and pop() in dpdk_datapacket


v0.5.0

[+] OF1.3 support marked as stable
[+] Changed default logging level from NOTICE(5) to ERROR (3)
[+][CMM] Added per LSI Packet In Rate Limiter(PIRL) functionality and config plugin support.
[+][CMM] Added switch_manager::get_switch_table_flows() to switch_manager #21 
[+][CMM] Adding port_manager::is_vlink(), port_manager::get_port_info() and port_manager::get_vlink_pair() #17 

[+][drivers] Added packet_proto_meta_imp.h to increase code re-usage (to be used with the default classifier)
[+][drivers] Implemented new optimized c_types_pktclassifier for sw drivers

[+][gnu-linux] Filtering loopback interface from available interfaces list #33
